semantic/semantic.output
Terminals unused in grammar

   _VOID


Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body

    6 type: _TYPE

    7 parameter: %empty
    8          | type _ID

    9 body: _LBRACKET variable_list statement_list _RBRACKET

   10 variable_list: %empty
   11              | variable_list variable

   12 variable: vars _SEMICOLON

   13 vars: _TYPE _ID
   14     | vars _COMMA _ID

   15 statement_list: %empty
   16               | statement_list statement

   17 statement: compound_statement
   18          | assignment_statement
   19          | if_statement
   20          | return_statement
   21          | inc_statement
   22          | do_while_statement

   23 do_while_statement: _DO statement _WHILE _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON

   24 inc_statement: _ID _INC _SEMICOLON

   25 $@2: %empty

   26 compound_statement: _LBRACKET $@2 variable_list statement_list _RBRACKET

   27 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   28 num_exp: exp
   29        | num_exp _AROP exp

   30 exp: literal
   31    | _ID
   32    | function_call
   33    | _LPAREN num_exp _RPAREN
   34    | _ID _INC

   35 literal: _INT_NUMBER
   36        | _UINT_NUMBER

   37 $@3: %empty

   38 function_call: _ID $@3 _LPAREN argument _RPAREN

   39 argument: %empty
   40         | num_exp

   41 if_statement: if_part
   42             | if_part _ELSE statement

   43 if_part: _IF _LPAREN rel_exp _RPAREN statement

   44 rel_exp: num_exp _RELOP num_exp

   45 return_statement: _RETURN num_exp _SEMICOLON
   46                 | _RETURN _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 6 13
_IF (259) 43
_ELSE (260) 42
_RETURN (261) 45 46
_ID (262) 5 8 13 14 23 24 27 31 34 38
_INT_NUMBER (263) 35
_UINT_NUMBER (264) 36
_LPAREN (265) 5 23 33 38 43
_RPAREN (266) 5 23 33 38 43
_LBRACKET (267) 9 26
_RBRACKET (268) 9 26
_ASSIGN (269) 27
_SEMICOLON (270) 12 23 24 27 45 46
_AROP (271) 29
_RELOP (272) 23 44
_WHILE (273) 23
_DO (274) 23
_COMMA (275) 14
_INC (276) 24 34
_VOID (277)
ONLY_IF (278)


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
program (25)
    on left: 1, on right: 0
function_list (26)
    on left: 2 3, on right: 1 3
function (27)
    on left: 5, on right: 2 3
$@1 (28)
    on left: 4, on right: 5
type (29)
    on left: 6, on right: 5 8
parameter (30)
    on left: 7 8, on right: 5
body (31)
    on left: 9, on right: 5
variable_list (32)
    on left: 10 11, on right: 9 11 26
variable (33)
    on left: 12, on right: 11
vars (34)
    on left: 13 14, on right: 12 14
statement_list (35)
    on left: 15 16, on right: 9 16 26
statement (36)
    on left: 17 18 19 20 21 22, on right: 16 23 42 43
do_while_statement (37)
    on left: 23, on right: 22
inc_statement (38)
    on left: 24, on right: 21
compound_statement (39)
    on left: 26, on right: 17
$@2 (40)
    on left: 25, on right: 26
assignment_statement (41)
    on left: 27, on right: 18
num_exp (42)
    on left: 28 29, on right: 27 29 33 40 44 45
exp (43)
    on left: 30 31 32 33 34, on right: 28 29
literal (44)
    on left: 35 36, on right: 23 30
function_call (45)
    on left: 38, on right: 32
$@3 (46)
    on left: 37, on right: 38
argument (47)
    on left: 39 40, on right: 38
if_statement (48)
    on left: 41 42, on right: 19
if_part (49)
    on left: 43, on right: 41 42
rel_exp (50)
    on left: 44, on right: 43
return_statement (51)
    on left: 45 46, on right: 20


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    6 type: _TYPE .

    $default  reduce using rule 6 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    5 function: type . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    5 function: type _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    5 function: type _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 10


State 10

    5 function: type _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 7 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    8 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    5 function: type _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 14


State 13

    8 parameter: type _ID .

    $default  reduce using rule 8 (parameter)


State 14

    5 function: type _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 15

    body  go to state 16


State 15

    9 body: _LBRACKET . variable_list statement_list _RBRACKET

    $default  reduce using rule 10 (variable_list)

    variable_list  go to state 17


State 16

    5 function: type _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


State 17

    9 body: _LBRACKET variable_list . statement_list _RBRACKET
   11 variable_list: variable_list . variable

    _TYPE  shift, and go to state 18

    $default  reduce using rule 15 (statement_list)

    variable        go to state 19
    vars            go to state 20
    statement_list  go to state 21


State 18

   13 vars: _TYPE . _ID

    _ID  shift, and go to state 22


State 19

   11 variable_list: variable_list variable .

    $default  reduce using rule 11 (variable_list)


State 20

   12 variable: vars . _SEMICOLON
   14 vars: vars . _COMMA _ID

    _SEMICOLON  shift, and go to state 23
    _COMMA      shift, and go to state 24


State 21

    9 body: _LBRACKET variable_list statement_list . _RBRACKET
   16 statement_list: statement_list . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _RBRACKET  shift, and go to state 29
    _DO        shift, and go to state 30

    statement             go to state 31
    do_while_statement    go to state 32
    inc_statement         go to state 33
    compound_statement    go to state 34
    assignment_statement  go to state 35
    if_statement          go to state 36
    if_part               go to state 37
    return_statement      go to state 38


State 22

   13 vars: _TYPE _ID .

    $default  reduce using rule 13 (vars)


State 23

   12 variable: vars _SEMICOLON .

    $default  reduce using rule 12 (variable)


State 24

   14 vars: vars _COMMA . _ID

    _ID  shift, and go to state 39


State 25

   43 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 40


State 26

   45 return_statement: _RETURN . num_exp _SEMICOLON
   46                 | _RETURN . _SEMICOLON

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44
    _SEMICOLON    shift, and go to state 45

    num_exp        go to state 46
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 27

   24 inc_statement: _ID . _INC _SEMICOLON
   27 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 50
    _INC     shift, and go to state 51


State 28

   26 compound_statement: _LBRACKET . $@2 variable_list statement_list _RBRACKET

    $default  reduce using rule 25 ($@2)

    $@2  go to state 52


State 29

    9 body: _LBRACKET variable_list statement_list _RBRACKET .

    $default  reduce using rule 9 (body)


State 30

   23 do_while_statement: _DO . statement _WHILE _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _DO        shift, and go to state 30

    statement             go to state 53
    do_while_statement    go to state 32
    inc_statement         go to state 33
    compound_statement    go to state 34
    assignment_statement  go to state 35
    if_statement          go to state 36
    if_part               go to state 37
    return_statement      go to state 38


State 31

   16 statement_list: statement_list statement .

    $default  reduce using rule 16 (statement_list)


State 32

   22 statement: do_while_statement .

    $default  reduce using rule 22 (statement)


State 33

   21 statement: inc_statement .

    $default  reduce using rule 21 (statement)


State 34

   17 statement: compound_statement .

    $default  reduce using rule 17 (statement)


State 35

   18 statement: assignment_statement .

    $default  reduce using rule 18 (statement)


State 36

   19 statement: if_statement .

    $default  reduce using rule 19 (statement)


State 37

   41 if_statement: if_part .
   42             | if_part . _ELSE statement

    _ELSE  shift, and go to state 54

    $default  reduce using rule 41 (if_statement)


State 38

   20 statement: return_statement .

    $default  reduce using rule 20 (statement)


State 39

   14 vars: vars _COMMA _ID .

    $default  reduce using rule 14 (vars)


State 40

   43 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 55
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    rel_exp        go to state 56


State 41

   31 exp: _ID .
   34    | _ID . _INC
   38 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _INC  shift, and go to state 57

    _LPAREN   reduce using rule 37 ($@3)
    $default  reduce using rule 31 (exp)

    $@3  go to state 58


State 42

   35 literal: _INT_NUMBER .

    $default  reduce using rule 35 (literal)


State 43

   36 literal: _UINT_NUMBER .

    $default  reduce using rule 36 (literal)


State 44

   33 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 59
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 45

   46 return_statement: _RETURN _SEMICOLON .

    $default  reduce using rule 46 (return_statement)


State 46

   29 num_exp: num_exp . _AROP exp
   45 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 60
    _AROP       shift, and go to state 61


State 47

   28 num_exp: exp .

    $default  reduce using rule 28 (num_exp)


State 48

   30 exp: literal .

    $default  reduce using rule 30 (exp)


State 49

   32 exp: function_call .

    $default  reduce using rule 32 (exp)


State 50

   27 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 62
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 51

   24 inc_statement: _ID _INC . _SEMICOLON

    _SEMICOLON  shift, and go to state 63


State 52

   26 compound_statement: _LBRACKET $@2 . variable_list statement_list _RBRACKET

    $default  reduce using rule 10 (variable_list)

    variable_list  go to state 64


State 53

   23 do_while_statement: _DO statement . _WHILE _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON

    _WHILE  shift, and go to state 65


State 54

   42 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _DO        shift, and go to state 30

    statement             go to state 66
    do_while_statement    go to state 32
    inc_statement         go to state 33
    compound_statement    go to state 34
    assignment_statement  go to state 35
    if_statement          go to state 36
    if_part               go to state 37
    return_statement      go to state 38


State 55

   29 num_exp: num_exp . _AROP exp
   44 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 61
    _RELOP  shift, and go to state 67


State 56

   43 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 68


State 57

   34 exp: _ID _INC .

    $default  reduce using rule 34 (exp)


State 58

   38 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 69


State 59

   29 num_exp: num_exp . _AROP exp
   33 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 70
    _AROP    shift, and go to state 61


State 60

   45 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 45 (return_statement)


State 61

   29 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    exp            go to state 71
    literal        go to state 48
    function_call  go to state 49


State 62

   27 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   29 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 72
    _AROP       shift, and go to state 61


State 63

   24 inc_statement: _ID _INC _SEMICOLON .

    $default  reduce using rule 24 (inc_statement)


State 64

   11 variable_list: variable_list . variable
   26 compound_statement: _LBRACKET $@2 variable_list . statement_list _RBRACKET

    _TYPE  shift, and go to state 18

    $default  reduce using rule 15 (statement_list)

    variable        go to state 19
    vars            go to state 20
    statement_list  go to state 73


State 65

   23 do_while_statement: _DO statement _WHILE . _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON

    _LPAREN  shift, and go to state 74


State 66

   42 if_statement: if_part _ELSE statement .

    $default  reduce using rule 42 (if_statement)


State 67

   44 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    num_exp        go to state 75
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 68

   43 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _DO        shift, and go to state 30

    statement             go to state 76
    do_while_statement    go to state 32
    inc_statement         go to state 33
    compound_statement    go to state 34
    assignment_statement  go to state 35
    if_statement          go to state 36
    if_part               go to state 37
    return_statement      go to state 38


State 69

   38 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 41
    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43
    _LPAREN       shift, and go to state 44

    $default  reduce using rule 39 (argument)

    num_exp        go to state 77
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    argument       go to state 78


State 70

   33 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 33 (exp)


State 71

   29 num_exp: num_exp _AROP exp .

    $default  reduce using rule 29 (num_exp)


State 72

   27 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 27 (assignment_statement)


State 73

   16 statement_list: statement_list . statement
   26 compound_statement: _LBRACKET $@2 variable_list statement_list . _RBRACKET

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _RBRACKET  shift, and go to state 79
    _DO        shift, and go to state 30

    statement             go to state 31
    do_while_statement    go to state 32
    inc_statement         go to state 33
    compound_statement    go to state 34
    assignment_statement  go to state 35
    if_statement          go to state 36
    if_part               go to state 37
    return_statement      go to state 38


State 74

   23 do_while_statement: _DO statement _WHILE _LPAREN . _ID _RELOP literal _RPAREN _SEMICOLON

    _ID  shift, and go to state 80


State 75

   29 num_exp: num_exp . _AROP exp
   44 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 61

    $default  reduce using rule 44 (rel_exp)


State 76

   43 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 43 (if_part)


State 77

   29 num_exp: num_exp . _AROP exp
   40 argument: num_exp .

    _AROP  shift, and go to state 61

    $default  reduce using rule 40 (argument)


State 78

   38 function_call: _ID $@3 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 81


State 79

   26 compound_statement: _LBRACKET $@2 variable_list statement_list _RBRACKET .

    $default  reduce using rule 26 (compound_statement)


State 80

   23 do_while_statement: _DO statement _WHILE _LPAREN _ID . _RELOP literal _RPAREN _SEMICOLON

    _RELOP  shift, and go to state 82


State 81

   38 function_call: _ID $@3 _LPAREN argument _RPAREN .

    $default  reduce using rule 38 (function_call)


State 82

   23 do_while_statement: _DO statement _WHILE _LPAREN _ID _RELOP . literal _RPAREN _SEMICOLON

    _INT_NUMBER   shift, and go to state 42
    _UINT_NUMBER  shift, and go to state 43

    literal  go to state 83


State 83

   23 do_while_statement: _DO statement _WHILE _LPAREN _ID _RELOP literal . _RPAREN _SEMICOLON

    _RPAREN  shift, and go to state 84


State 84

   23 do_while_statement: _DO statement _WHILE _LPAREN _ID _RELOP literal _RPAREN . _SEMICOLON

    _SEMICOLON  shift, and go to state 85


State 85

   23 do_while_statement: _DO statement _WHILE _LPAREN _ID _RELOP literal _RPAREN _SEMICOLON .

    $default  reduce using rule 23 (do_while_statement)
